--- a/Pedapp/Pedapp/Agregar.xaml
+++ b/Pedapp/Pedapp/Agregar.xaml
@@ -17,6 +17,35 @@
                         ItemDisplayBinding="{Binding Name}"
                         SelectedIndexChanged="pkrAlcohol_SelectedIndexChanged"/>
 
+                <CollectionView x:Name="lsvIngredients" ItemSizingStrategy="MeasureAllItems" >
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout  
+                           HorizontalItemSpacing="0" 
+                           Orientation="Vertical"
+                           SnapPointsType="MandatorySingle"
+                           SnapPointsAlignment="Start"/>
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Padding="5" HeightRequest="40">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width=".4*" />
+                                    <ColumnDefinition Width=".3*" />
+                                    <ColumnDefinition Width=".3*" />
+                                    <ColumnDefinition Width=".1*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Label Grid.Column="0" Text="{Binding Name}" VerticalOptions="Center"/>
+                                <Label Grid.Column="1" Text="{Binding Quantity}" VerticalOptions="Center"/>
+                                <Label Grid.Column="2" Text="{Binding Unit}" VerticalOptions="Center"/>
+                                <Button Grid.Column="3" Text="X" TextColor="Red" BackgroundColor="#CCC" ClassId="{Binding Id}" Clicked="RemoveIngredientButton_OnClicked"/>
+                            </Grid>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
                 <StackLayout>
                     <Entry x:Name ="txtIngredientbe" Placeholder="Ingredientes"  FontSize="20" IsEnabled="False" />
                     <StackLayout.GestureRecognizers>
@@ -45,11 +74,11 @@
                 <Frame HasShadow="True" >
                     <StackLayout>
                         <Label x:Name="lblSlider" Style="{StaticResource Etiquetas}" 
-                               Text="5" HorizontalOptions="Center"/>
-                        <Label Text="Alcohol %"/>
-                        <Slider x:Name="sldnivelAlcohol"  Maximum="100" Minimum="0" Value="5"
+                               Text="1" HorizontalOptions="Center"/>
+                        <Label Text="Nivel de Alcohol"/>
+                        <Slider x:Name="sldnivelAlcohol"  Maximum="5" Minimum="0" Value="1"
                                 MinimumTrackColor="#2196F3" MaximumTrackColor="Blue"
-                                ThumbColor="Black" 
+                                ThumbColor="Black"
                                 ValueChanged="sldnivelAlcohol_ValueChanged"/>
                     </StackLayout>
                 </Frame>
